assets/css/style.css
body {
    background-color: #1D0742;
    height: auto;
    background-image: url('../images/backgroundimg.jpg') !important;
    background-repeat: repeat;
    font-family: 'Josefin Sans', sans-serif;
}

#page-container {
    position: relative;
    min-height: 100vh;    
}

#content-container {
    padding-bottom: 2rem;
}

.navbar {
    background: linear-gradient(90deg, rgba(231,208,106,1) 0%, rgba(188,148,63,1) 50%, rgba(231,208,106,1) 100%);
}

.navbar-collapse {
    text-align: center;
}

.nav-link {
    font-size: large;
    text-transform: uppercase;
    color: black;
}

.nav-link:hover {
    text-decoration: underline;
}

footer {
    height: 2rem;
    background-color: #BC943F;
    position: absolute;
    bottom: 0;
    text-align: center;
}

footer a {
    color: black;
}

footer a:hover {
    transform: scale(1.2);
}

/* ------------ GAME PAGE ------------ */

.game {
    width: 70% !important;
}

#game-container {
    width: 500px;
    border: 2px solid black;
    background-color: rgba(0, 0, 0, 0.5);
}

.choice-prefix {
    padding: 0.2rem 0.5rem;
    background-color: black;
    color: #BC943F;
    border: 2px solid #BC943F;
    border-radius: 3px;
}

.choice-text {
    background-color: #BC943F;
    border-radius: 2px;
    font-size: large;
}

#card-question img {
    height: 250px;
    border: solid 3px black;
}

.correct {
    background-color: #48B448;
}

.incorrect {
    background-color: #BB5541;
}

.game-info {
    background-color: #BC943F;
    text-align: center;
    font-size: x-large;
    border-radius: 5px;
}

.game-info h3 {
    background-color: black;
    color: #BC943F;
    border-radius: 5px;
}

#end-modal-content {
    background-color: rgba(231,208,106,0.9);
    color: black;
    font-size: x-large;
}

.end-button {
    background-color: black;
    color: rgba(231,208,106,1);
}

.end-button:hover {
    background-color: black;
    color: #BC943F;
}

#progress-bar {
    width: 80%;
    height: 1.5rem;
    margin: 1% auto;
    border: 0.2rem solid rgba(231,208,106,1);

}

#progress-bar-full {
    height: 1.2rem;
    background-color: rgba(231,208,106,1);
    width: 0%;
    color: black;
}

/* ------------ INDEX PAGE ------------ */

.index-button {
    background-color: black;
    color: rgba(231,208,106,1);
}

.index-button:hover {
    background-color: black;
    color: #BC943F;
}

.index-text {
    background-color: rgba(231,208,106,0.9);
    margin: auto;
    margin-top: 2%;
}

#how-to-modal-content {
    color: rgba(231,208,106, 1);
    background-color: black;
    font-size: larger;
}

.btn-close {
    background-color: #BC943F;
}

/* ------------ LEARN PAGE ------------ */

.learn-card {
    height: 400px;
    width: 232px;
    position: relative;
    transition: transform .5s;
    transform-style: preserve-3d;
    perspective: 1000px;
    transform: scale(1);
}

.learn-card img {
    height: 400px;
    width: 232px;
    border-radius: 5px;

}

.learn-card.flip {
    transform: rotateY(180deg);
}

.card-front,
.card-reverse {
    position: absolute;
    backface-visibility: hidden;
    border-radius: 5px;
}

.card-reverse {
    height: 400px;
    width: 232px;
    line-height: 400px;
    background-color: #BC943F;
    transform: rotateY(180deg);
    border: 3px solid black;
    text-align: center;
    font-size: x-large;
    padding: 5px;
    overflow-wrap: break-word;
}

.card-reverse p {
    line-height: 1.5;
    display: inline-block;
    vertical-align: middle;
}

.next-button {
    background-color: #BC943F;
}

.next-button:hover {
    background-color: rgba(231,208,106,1);
}

#learn-heading {
    color: #BC943F;
    background-color: rgba(0, 0, 0, 0.7);
    font-size: x-large;
}

.meaning-btn {
    background-color: black;
    color: #BC943F;
}

.meaning-btn:hover {
    background-color: black;
    color: rgba(231,208,106, 1);
}

#fullmeaningmodal-content {
    background-color: rgba(231,208,106, 1);
    color: black;
    font-size: larger;
    text-align: center;
}

/* ------------ CONTACT PAGE ------------ */

.contact-area {
    background-color: rgba(0, 0, 0, 0.7);
    width: 80%;
    margin: auto;
}

.contact-area h1 {
    color: #BC943F;
}

.contact-form {
    width: 70%;
    margin: auto;
}

.contact-form button {
    background-color: #BC943F;
    color: black;
    margin-top: 1%;
}

.contact-form button:hover {
    background-color: rgba(231,208,106, 1);
}

/* ------------ 404 PAGE ------------ */

#error-message {
    width: 60%;
    background-color: rgba(231,208,106,0.7);
    text-align: center;
    margin: auto;
}

#error-message h1 {
    font-size: 6em;
}

